--- a/bedandbreakfastapp/src/main/resources/application.properties
+++ b/bedandbreakfastapp/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.data.mongodb.database=bedandbreakfast
 spring.data.mongodb.uri=
 
-spring.datasource.url=
-spring.datasource.username= 
-spring.datasource.password= 
+spring.datasource.url=jdbc:mysql://localhost:3306/bedandbreakfast
+spring.datasource.username= root
+spring.datasource.password= root
