--- a/bedandbreakfastapp/src/main/resources/application.properties
+++ b/bedandbreakfastapp/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.data.mongodb.database=bedandbreakfast
-# spring.data.mongodb.uri=
+spring.data.mongodb.uri=
 
 spring.datasource.url=jdbc:mysql://localhost:3306/bedandbreakfast
 spring.datasource.username= root
